--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 appdirs==1.4.3
+beautifulsoup4==4.5.3
+bs4==0.0.1
 google-api-python-client==1.6.2
 httplib2==0.10.3
 oauth2client==4.0.0
@@ -7,5 +9,7 @@ pyasn1==0.2.3
 pyasn1-modules==0.0.8
 pyparsing==2.2.0
 rsa==3.4.2
+selenium==3.3.1
+simplejson==3.10.0
 six==1.10.0
 uritemplate==3.0.0
